# shipsim

./: .gitignore  AGENTS.md  AUDIT.md  CONTEXT.md  Cargo.toml  HANDOFF-combat-v2.md  UI_SUCKS.md  implementation-plan-combat-v2.md  implementation-plan-d8.md  implementation-plan-fasa-stcs.md  implementation-plan-slice2.md  implementation-plan-slice3.md  implementation-plan-state-encapsulation.md  implementation-plan.md
.killhouse/: delegations.jsonl  run-state.json
campaigns/: demo.toml
data/: ship_costs.toml  sizes.toml
docs/: AGENT-PLAY.md  ARCHITECTURE-slice3.md  ARCHITECTURE.md  BALANCE-COST.md  BALANCE-PROTOCOL.md  BALANCE.md  BUGFIX-PLAN-20260714.md  CONTEXT-fasa-stcs.md  CONTEXT-slice2.md  CONTEXT-slice3.md  CONTEXT-slice4.md  D8-FRONTEND-BRIEF.md  GAMEPLAY-RUBRICS.md  HANDOFF.md  MOVEMENT-INERTIA-PLAN.md  PLAY-V2.md  PRD-combat-model-v2.md  PRD-d8-love-frontend.md  PRD-fasa-stcs-pivot.md  PRD-slice2.md  PRD-slice3.md  PRD.md  PROTOCOL.md  ROADMAP.md  SAVE-FORMAT.md  SHIP-ART-IMPLEMENTATION-PLAN.md  SHIP-ART-PLAN.md  SHIP-ART-PRD.md  SIMULATION.md  SIZE-VARIANTS.md  TODO.md  combat-v2-tables.md
frontend/: .gitignore  README.md
frontend/tui/: .gitignore  ADR.md  AGENT-HANDOFF.md  Cargo.toml  HANDOFF-REVIEW-20260714.md  PLAY-UX-MILESTONES.md  PRD.md  README.md  UI-RECOMMENDATIONS.md  UX-IMPLEMENTATION-PLAN.md  UX-RECOMMENDATIONS.md
frontend/tui/src/: app.rs  harness.rs  input.rs  main.rs  protocol.rs  scripted_pump.rs  tests.rs  tutorial.rs  ui.rs
scenarios/: ai.toml  class_id_duplicates.toml  combat.toml  combat_unbounded.toml  d8_frontend_orders.jsonl  (+21 more)
(+286 files in other folders)
