[package]
name = "shipsim_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "shipsim"
path = "src/bin/shipsim.rs"
test = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[profile.test]
panic = "unwind"
