[package]
name = "shipsim-tui"
version = "0.1.0"
edition = "2021"
description = "ratatui terminal client for shipsim (Small tier)"

[[bin]]
name = "shipsim-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
ratatui = { version = "0.29", features = ["underline-color"] }
